feat: dynamically import only the messages of the selected language

--- a/packages/web/src/locales/ko/messages.po
+++ b/packages/web/src/locales/ko/messages.po
@@ -6,7 +6,13 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: @lingui/cli\n"
 "Language: ko\n"
+"Project-Id-Version: \n"
+"Report-Msgid-Bugs-To: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Plural-Forms: \n"
 
 #: src/routes/_main.goals.lazy.tsx:54
 msgid "New Goal"
-msgstr ""
+msgstr "새로운 목표"
