--- a/packages/web/src/locales/ko/messages.po
+++ b/packages/web/src/locales/ko/messages.po
@@ -14,152 +14,156 @@ msgstr ""
 "Plural-Forms: \n"
 
 #: src/routes/_main.goals.new.tsx:182
-msgid " Create goal"
-msgstr ""
+#~ msgid "Create goal"
+#~ msgstr "목표 만들기"
 
 #: src/components/GoalForm.tsx:232
-msgid " Show extra options"
-msgstr ""
+#~ msgid "Show extra options"
+#~ msgstr "추가 옵션 보기"
 
 #: src/components/SignOutButton.tsx:49
-msgid " Unsynced data will be lost"
-msgstr ""
+#~ msgid "Unsynced data will be lost"
+#~ msgstr "동기화되지 않은 데이터는 손실됩니다"
 
 #: src/routes/index.lazy.tsx:59
 msgid "Already a user?"
-msgstr ""
+msgstr "이미 계정이 있으신가요?"
 
 #: src/components/GoalCard.tsx:199
 msgid "Are you sure you want to delete"
-msgstr ""
+msgstr "정말 삭제하시겠습니까?"
 
 #: src/components/GoalDetailPanel.tsx:242
 msgid "Cancel editing"
-msgstr ""
+msgstr "수정 취소"
 
 #: src/components/StatusMenu.tsx:170
 msgid "Check sync error or sign in"
-msgstr ""
+msgstr "동기화 오류를 확인하거나 로그인하세요"
 
 #: src/components/StatusMenu.tsx:43
 msgid "Check your internet connection and try again."
-msgstr ""
+msgstr "인터넷 연결을 확인하고 다시 시도해주세요."
 
 #: src/components/GoalForm.tsx:78
 msgid "Choose a name for your goal."
-msgstr ""
+msgstr "목표의 이름을 정해주세요."
 
 #: src/components/StatusMenu.tsx:82
 msgid "Could not connect with the sync service. Try again later."
-msgstr ""
+msgstr "동기화 서비스에 연결할 수 없습니다. 나중에 다시 시도해주세요."
 
 #: src/components/SignInForm.tsx:199
 msgid "Create account"
-msgstr ""
+msgstr "계정 만들기"
+
+#: src/routes/_main.goals.new.tsx:182
+msgid "Create goal"
+msgstr "목표 만들기"
 
 #: src/components/NoGoalsPlaceholder.tsx:31
 msgid "Create your first goal!"
-msgstr ""
+msgstr "첫 번째 목표를 만드세요!"
 
 #: src/components/GoalCard.tsx:212
 msgid "Delete"
-msgstr ""
+msgstr "삭제"
 
 #: src/components/GoalCard.tsx:189
 #: src/components/GoalCard.tsx:196
 msgid "Delete goal"
-msgstr ""
+msgstr "목표 삭제"
 
 #: src/components/GoalCard.tsx:208
 msgid "Deleted goal: {title}"
-msgstr ""
+msgstr "삭제된 목표: {title}"
 
 #: src/components/GoalForm.tsx:303
 msgid "e.g. words"
-msgstr ""
+msgstr "예: 단어"
 
 #: src/components/GoalDetailPanel.tsx:213
 msgid "Edit goal"
-msgstr ""
+msgstr "목표 수정"
 
 #: src/components/GoalForm.tsx:101
 msgid "eg. 'Learn 1000 French words'"
-msgstr ""
+msgstr "예: '프랑스어 단어 1000개 익히기'"
 
 #: src/components/SignInForm.tsx:68
 msgid "Email"
-msgstr ""
+msgstr "이메일"
 
 #: src/components/SignUpForm.tsx:149
 #: src/components/SignInForm.tsx:78
 msgid "Email is required"
-msgstr ""
+msgstr "이메일을 입력해주세요"
 
 #: src/routes/_main.goals.new.tsx:77
 msgid "Failed to add goal"
-msgstr ""
+msgstr "목표 추가 실패"
 
 #: src/components/GoalDetailPanel.tsx:131
 msgid "Failed to update goal"
-msgstr ""
+msgstr "목표 업데이트 실패"
 
 #: src/routes/index.lazy.tsx:47
 msgid "First time?"
-msgstr ""
+msgstr "처음이신가요?"
 
 #: src/routes/signup.lazy.tsx:20
 #: src/routes/signin.lazy.tsx:21
 msgid "Go back"
-msgstr ""
+msgstr "뒤로 가기"
 
 #: src/components/GoalForm.tsx:68
 #: src/components/GoalForm.tsx:80
 msgid "Goal name"
-msgstr ""
+msgstr "목표 이름"
 
 #. placeholder {0}: user?.name
 #: src/components/StatusMenu.tsx:202
 msgid "Hello, {0}!"
-msgstr ""
+msgstr "안녕하세요, {0}님!"
 
 #: src/components/GoalForm.tsx:225
 msgid "Hide extra options"
-msgstr ""
+msgstr "추가 옵션 숨기기"
 
 #: src/components/SignOutButton.tsx:58
 msgid "If you sign out now, this data will be permanently lost!"
-msgstr ""
+msgstr "지금 로그아웃하면 이 데이터는 영구적으로 손실됩니다!"
 
 #: src/components/GoalForm.tsx:313
 msgid "Initial value"
-msgstr ""
+msgstr "초기값"
 
 #: src/components/SignInForm.tsx:136
 msgid "Invalid credentials"
-msgstr ""
+msgstr "잘못된 로그인 정보입니다"
 
 #: src/components/SignInForm.tsx:162
 msgid "It looks like you are offline!"
-msgstr ""
+msgstr "오프라인 상태인 것 같습니다!"
 
 #: src/components/SignUpForm.tsx:236
 msgid "It seems like you are not connected!"
-msgstr ""
+msgstr "인터넷에 연결되어 있지 않은 것 같습니다!"
 
 #: src/components/StatusMenu.tsx:153
 msgid "Last synced:"
-msgstr ""
+msgstr "마지막 동기화:"
 
 #. placeholder {0}: format(updatedAt, 'PPp')
 #: src/components/GoalDetailPanel.tsx:216
 msgid "Last updated at: {0}"
-msgstr ""
+msgstr "마지막 업데이트: {0}"
 
 #: src/routes/_main.goals.new.tsx:108
 #: src/components/SignUpForm.tsx:67
 #: src/components/GoalDetailPanel.tsx:171
 msgid "Missing required fields"
-msgstr ""
+msgstr "필수 항목을 입력해주세요"
 
 #: src/components/GoalDetailPanel.tsx:171
 #~ msgid "Missing required fields  "
@@ -167,11 +171,11 @@ msgstr ""
 
 #: src/components/SignUpForm.tsx:109
 msgid "Name"
-msgstr ""
+msgstr "이름"
 
 #: src/components/SignUpForm.tsx:105
 msgid "Name is required"
-msgstr ""
+msgstr "이름을 입력해주세요"
 
 #: src/routes/_main.goals.lazy.tsx:54
 msgid "New Goal"
@@ -179,135 +183,143 @@ msgstr "새로운 목표"
 
 #: src/components/GoalForm.tsx:346
 msgid "Numbers only"
-msgstr ""
+msgstr "숫자만 입력 가능"
 
 #: src/components/SignInForm.tsx:113
 msgid "Password"
-msgstr ""
+msgstr "비밀번호"
 
 #: src/components/SignInForm.tsx:123
 msgid "Password is required"
-msgstr ""
+msgstr "비밀번호를 입력해주세요"
 
 #: src/components/GoalDetailPanel.tsx:263
 #: src/components/GoalDetailPanel.tsx:274
 msgid "Save"
-msgstr ""
+msgstr "저장"
 
 #: src/components/GoalForm.tsx:121
 msgid "Set a target value for your goal."
-msgstr ""
+msgstr "목표 달성 값을 설정해주세요."
 
 #: src/routes/_main.goals.new.tsx:150
 msgid "Set up your new goal. You can always edit it later."
-msgstr ""
+msgstr "새로운 목표를 설정하세요. 나중에 언제든 수정할 수 있습니다."
+
+#: src/components/GoalForm.tsx:232
+msgid "Show extra options"
+msgstr "추가 옵션 보기"
 
 #: src/routes/signin.lazy.tsx:27
 #: src/components/SignInForm.tsx:191
 msgid "Sign In"
-msgstr ""
+msgstr "로그인"
 
 #: src/components/StatusMenu.tsx:60
 msgid "Sign in again to sync your data."
-msgstr ""
+msgstr "데이터 동기화를 위해 다시 로그인해주세요."
 
 #: src/components/StatusMenu.tsx:65
 msgid "Sign in to sync your data."
-msgstr ""
+msgstr "데이터 동기화를 위해 로그인해주세요."
 
 #: src/components/SignInForm.tsx:165
 msgid "Sign in will not work."
-msgstr ""
+msgstr "로그인을 할 수 없습니다."
 
 #: src/components/SignOutButton.tsx:70
 msgid "Sign out"
-msgstr ""
+msgstr "로그아웃"
 
 #: src/routes/signup.lazy.tsx:26
 #: src/components/SignUpForm.tsx:265
 msgid "Sign Up"
-msgstr ""
+msgstr "회원가입"
 
 #: src/components/SignUpForm.tsx:239
 msgid "Sign up will not work."
-msgstr ""
+msgstr "회원가입을 할 수 없습니다."
 
 #: src/components/GoalForm.tsx:241
 msgid "Start date"
-msgstr ""
+msgstr "시작일"
 
 #: src/routes/index.lazy.tsx:54
 msgid "Start New"
-msgstr ""
+msgstr "새로 시작하기"
 
 #: src/routes/_main.goals.new.tsx:73
 msgid "Sucessfully added goal"
-msgstr ""
+msgstr "목표가 추가되었습니다"
 
 #: src/components/GoalDetailPanel.tsx:127
 msgid "Sucessfully updated goal"
-msgstr ""
+msgstr "목표가 업데이트되었습니다"
 
 #: src/components/StatusMenu.tsx:40
 #: src/components/StatusMenu.tsx:79
 msgid "Sync is off"
-msgstr ""
+msgstr "동기화가 꺼져있습니다"
 
 #: src/components/StatusMenu.tsx:126
 msgid "Syncing"
-msgstr ""
+msgstr "동기화 중"
 
 #: src/components/GoalForm.tsx:155
 msgid "Target date"
-msgstr ""
+msgstr "목표일"
 
 #: src/components/GoalForm.tsx:171
 msgid "Target date must be after start date"
-msgstr ""
+msgstr "목표일은 시작일 이후여야 합니다"
 
 #: src/components/GoalForm.tsx:111
 msgid "Target value"
-msgstr ""
+msgstr "목표값"
 
 #: src/components/NoGoalsPlaceholder.tsx:28
 msgid "There are no goals"
-msgstr ""
+msgstr "목표가 없습니다"
 
 #: src/components/GoalCard.tsx:221
 msgid "Toggle goal details"
-msgstr ""
+msgstr "목표 상세 정보 토글"
 
 #: src/components/GoalForm.tsx:272
 #: src/components/GoalForm.tsx:282
 msgid "Unit"
-msgstr ""
+msgstr "단위"
+
+#: src/components/SignOutButton.tsx:49
+msgid "Unsynced data will be lost"
+msgstr "동기화되지 않은 데이터는 손실됩니다"
 
 #: src/components/GoalForm.tsx:144
 msgid "Value for goal completion (number)"
-msgstr ""
+msgstr "목표 달성을 위한 값 (숫자)"
 
 #. placeholder {0}: user.name
 #: src/routes/signin.lazy.tsx:32
 msgid "Welcome back, {0}!"
-msgstr ""
+msgstr "다시 오신 것을 환영합니다, {0}님!"
 
 #: src/components/StatusMenu.tsx:186
 msgid "Welcome back, {userName}!"
-msgstr ""
+msgstr "다시 오신 것을 환영합니다, {userName}님!"
 
 #. placeholder {0}: updatedUser.name
 #: src/components/SignUpForm.tsx:48
 msgid "Welcome, {0}!"
-msgstr ""
+msgstr "환영합니다, {0}님!"
 
 #: src/components/StatusMenu.tsx:148
 msgid "Your data is synced!"
-msgstr ""
+msgstr "데이터가 동기화되었습니다!"
 
 #: src/components/SignOutButton.tsx:53
 msgid "Your most recent changes have not been synced yet."
-msgstr ""
+msgstr "최근 변경사항이 아직 동기화되지 않았습니다."
 
 #: src/components/StatusMenu.tsx:57
 msgid "Your session has expired."
-msgstr ""
+msgstr "세션이 만료되었습니다."
